--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,10 @@
   <h1>
     Bem vindo ao {{title}}!
   </h1>
- 
-</div>
-<div style="text-align:left">
-  <h2>{{hero.id}} - {{hero.name}} details!</h2>
-</div>
-<label>name: </label>
-<input [(ngModel)]="hero.name" placeholder="name">
 
+<h2>{{hero.name}} details!</h2>
+</div>
+<div>
+  <label>name: </label>
+  <input [(ngModel)]="hero.name" placeholder="name">
+</div>
