--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,24 @@
   <h1>
     Bem vindo ao {{title}}!
   </h1>
+</div>
 
-<h2>{{hero.name}} details!</h2>
+
+<h2>My Heroes</h2>
+
+<div *ngIf="selectedHero" >
+  <h2>{{selectedHero.name}} details!</h2>
+  <div><label>id: </label>{{selectedHero.id}}</div>
+  <div>
+    <label>name: </label>
+    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
+  </div>
 </div>
-<div>
-  <label>name: </label>
-  <input [(ngModel)]="hero.name" placeholder="name">
-</div>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+    (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
